kubenretes/tutorials/scripts/jenkins/ingress-resource.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /jenkins
        backend:
          service:
            name: jenkins
            port:
              number: 8080
